<resources>
    <string name="app_name">HelloWorld</string>
    <string name="tv_test1">张小盒张小盒</string>
    <string name="tv_test2">张小盒张小盒张小盒张小盒张小盒张小盒张小盒张张小盒张小盒张小盒张小盒张小盒张小盒张小盒张小盒张小盒张小盒张小盒张小盒张小盒张小盒张小盒张小盒小盒张小盒张小盒张小盒张小盒张小盒张小盒张小盒张小盒</string>
    <string name="bt_test1">按钮</string>
    <string name="ios">IOS</string>
    <string name="h5">H5</string>
    <string name="other">其他</string>
    <string name="xq">你的兴趣：</string>
    <string name="bc">编程</string>
    <string name="zf">做饭</string>
    <string name="kf">你会哪些移动开发：</string>
    <string name="android">Android</string>
</resources>