<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp">

    <TextView
        android:id="@+id/tv_title_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kf"
        android:textColor="#000"
        />

    <CheckBox
        android:id="@+id/cb_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/android"
        android:layout_below="@id/tv_title_1"
        android:textSize="16sp"
        android:textColor="#aa6600"
        android:checked="true"
        android:layout_marginTop="10dp"/>

    <CheckBox
        android:id="@+id/cb_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ios"
        android:layout_below="@id/cb_1"
        android:textSize="16sp"
        android:textColor="#aa6600"/>

    <CheckBox
        android:id="@+id/cb_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/h5"
        android:layout_below="@id/cb_2"
        android:textSize="16sp"
        android:textColor="#aa6600"/>

    <CheckBox
        android:id="@+id/cb_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/other"
        android:layout_below="@id/cb_3"
        android:textSize="16sp"
        android:textColor="#aa6600"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/cb_4"
        android:orientation="vertical"
        android:layout_marginTop="50dp">
        <TextView
            android:id="@+id/tv_title_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/xq"
            android:textColor="#000"

            />

        <CheckBox
            android:id="@+id/cb_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bc"
            android:button="@drawable/bg_checkbox"
            android:textSize="16sp"
            android:textColor="#aa6600"
            android:checked="true"
            android:layout_marginTop="10dp"/>

        <CheckBox
            android:id="@+id/cb_6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zf"
            android:button="@drawable/bg_checkbox"
            android:textSize="16sp"
            android:textColor="#aa6600"/>

    </LinearLayout>

</RelativeLayout>